[gd_scene load_steps=10 format=3 uid="uid://cy8fsxhxfik3e"]

[ext_resource type="Script" path="res://Player.gd" id="1_r7xcm"]
[ext_resource type="Script" path="res://Panel.gd" id="2_f0ke8"]
[ext_resource type="Texture2D" uid="uid://ccuattjpx4s3i" path="res://circle1475.png" id="2_m0o1f"]
[ext_resource type="Script" path="res://InterractRaycast.gd" id="3_q6j3q"]
[ext_resource type="Texture2D" uid="uid://du1jutokndkh5" path="res://loading.png" id="4_1x0y0"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_3vw5f"]

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_ghn54"]
points = PackedVector3Array(-0.125207, -0.532801, -0.480507, 0.0227831, 0.47607, 0.498884, 0.169713, 0.559144, 0.464172, 0.231051, -0.803591, 0.320455, 0.40741, 0.651043, -0.243523, -0.482789, 0.594843, 0.0822132, -0.362868, -0.682312, 0.289697, 0.469044, -0.654529, -0.0662713, -0.127444, 0.842701, -0.338103, -0.393435, -0.683942, -0.244717, 0.438255, 0.623309, 0.200849, 0.0841477, 0.977454, 0.114795, -0.0682023, -0.976458, -0.12927, 0.20055, -0.563129, -0.451454, -0.185527, 0.595453, -0.453475, -0.273363, 0.592268, 0.407754, -0.00693649, -0.476823, 0.49966, 0.375821, -0.588614, 0.316955, 0.111579, 0.563059, -0.481177, -0.41725, 0.527866, -0.270497, -0.484546, -0.596972, -0.0665097, -0.279747, 0.908561, 0.0533361, -0.250197, -0.880712, 0.205319, 0.263647, -0.902771, -0.127394, 0.293368, 0.871526, -0.157196, 0.373412, -0.526319, -0.328246, 0.499663, 0.476641, -0.00688856, 0.0531056, 0.875001, 0.324703, -0.154543, -0.590854, 0.465879, -0.0972799, -0.782358, -0.398188, -0.387649, -0.498171, 0.31565, -0.30068, -0.587995, -0.388901)

[sub_resource type="Theme" id="Theme_cnu5a"]
default_font_size = 26

[sub_resource type="Theme" id="Theme_7wrvu"]
default_font_size = 25

[node name="Player" type="RigidBody3D"]
lock_rotation = true
script = ExtResource("1_r7xcm")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("CapsuleMesh_3vw5f")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("ConvexPolygonShape3D_ghn54")

[node name="TwistPivot" type="Node3D" parent="."]

[node name="PitchPivot" type="Node3D" parent="TwistPivot"]

[node name="Camera3D" type="Camera3D" parent="TwistPivot/PitchPivot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.652564, -0.0848718)

[node name="Panel" type="Panel" parent="TwistPivot/PitchPivot/Camera3D"]
visible = false
offset_left = 586.0
offset_top = 455.0
offset_right = 1331.0
offset_bottom = 621.0
script = ExtResource("2_f0ke8")

[node name="Button" type="Button" parent="TwistPivot/PitchPivot/Camera3D/Panel"]
layout_mode = 0
offset_left = 24.0
offset_top = 75.0
offset_right = 159.0
offset_bottom = 131.0
text = "cacazaeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeee"
text_overrun_behavior = 3

[node name="Label" type="Label" parent="TwistPivot/PitchPivot/Camera3D/Panel/Button"]
layout_mode = 0
offset_left = 19.0
offset_top = -28.0
offset_right = 115.0
offset_bottom = -5.0
text = "1000"
horizontal_alignment = 1

[node name="Button2" type="Button" parent="TwistPivot/PitchPivot/Camera3D/Panel"]
offset_left = 586.0
offset_top = 75.0
offset_right = 721.0
offset_bottom = 131.0
text = "cacazaeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeee"
text_overrun_behavior = 3

[node name="Label" type="Label" parent="TwistPivot/PitchPivot/Camera3D/Panel/Button2"]
offset_left = 19.0
offset_top = -28.0
offset_right = 115.0
offset_bottom = -5.0
text = "1000"
horizontal_alignment = 1

[node name="Button3" type="Button" parent="TwistPivot/PitchPivot/Camera3D/Panel"]
offset_left = 446.0
offset_top = 75.0
offset_right = 581.0
offset_bottom = 131.0
text = "cacazaeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeee"
text_overrun_behavior = 3

[node name="Label" type="Label" parent="TwistPivot/PitchPivot/Camera3D/Panel/Button3"]
offset_left = 19.0
offset_top = -28.0
offset_right = 115.0
offset_bottom = -5.0
text = "1000"
horizontal_alignment = 1

[node name="Button4" type="Button" parent="TwistPivot/PitchPivot/Camera3D/Panel"]
offset_left = 306.0
offset_top = 75.0
offset_right = 441.0
offset_bottom = 131.0
text = "cacazaeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeee"
text_overrun_behavior = 3

[node name="Label" type="Label" parent="TwistPivot/PitchPivot/Camera3D/Panel/Button4"]
offset_left = 19.0
offset_top = -28.0
offset_right = 115.0
offset_bottom = -5.0
text = "1000"
horizontal_alignment = 1

[node name="Button5" type="Button" parent="TwistPivot/PitchPivot/Camera3D/Panel"]
offset_left = 164.0
offset_top = 75.0
offset_right = 299.0
offset_bottom = 131.0
text = "cacazaeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeee"
text_overrun_behavior = 3

[node name="Label" type="Label" parent="TwistPivot/PitchPivot/Camera3D/Panel/Button5"]
offset_left = 19.0
offset_top = -28.0
offset_right = 115.0
offset_bottom = -5.0
text = "1000"
horizontal_alignment = 1

[node name="TextureRect" type="TextureRect" parent="TwistPivot/PitchPivot/Camera3D"]
offset_left = 955.0
offset_top = 535.0
offset_right = 965.0
offset_bottom = 545.0
texture = ExtResource("2_m0o1f")
expand_mode = 1

[node name="InteractRay" type="RayCast3D" parent="TwistPivot/PitchPivot/Camera3D"]
transform = Transform3D(1, 0, 0, 0, -6.55671e-08, -1, 0, 1.5, -4.37114e-08, 0, -0.0602745, -0.405533)
script = ExtResource("3_q6j3q")

[node name="Hold" type="Node3D" parent="TwistPivot/PitchPivot/Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0624276, -1.63919)

[node name="RichTextLabel" type="RichTextLabel" parent="TwistPivot/PitchPivot/Camera3D"]
offset_left = 18.0
offset_top = 1021.0
offset_right = 120.0
offset_bottom = 1062.0
auto_translate = false
theme = SubResource("Theme_cnu5a")
bbcode_enabled = true
text = "[b]Money :[/b]"

[node name="MoneyLabel" type="Label" parent="TwistPivot/PitchPivot/Camera3D"]
offset_left = 128.0
offset_top = 1021.0
offset_right = 727.0
offset_bottom = 1378.0
theme = SubResource("Theme_7wrvu")
text = "100000000"

[node name="RichTextLabel2" type="RichTextLabel" parent="TwistPivot/PitchPivot/Camera3D"]
offset_left = 1674.0
offset_top = 993.0
offset_right = 2002.0
offset_bottom = 1184.0
bbcode_enabled = true
text = "      [b]Left Click :[/b] Grab Objects
[b]Right Click :[/b] Rotate Objects
                 [b]E :[/b] Interract/Open"

[node name="LoadingTexture" type="TextureRect" parent="TwistPivot/PitchPivot/Camera3D"]
visible = false
offset_right = 1926.0
offset_bottom = 1086.0
texture = ExtResource("4_1x0y0")

[node name="DrinkName" type="Label" parent="TwistPivot/PitchPivot/Camera3D"]
offset_left = 780.0
offset_top = 564.0
offset_right = 1141.0
offset_bottom = 652.0
horizontal_alignment = 1

[connection signal="pressed" from="TwistPivot/PitchPivot/Camera3D/Panel/Button" to="TwistPivot/PitchPivot/Camera3D/Panel" method="_on_button_pressed"]
[connection signal="pressed" from="TwistPivot/PitchPivot/Camera3D/Panel/Button2" to="TwistPivot/PitchPivot/Camera3D/Panel" method="_on_button_2_pressed"]
[connection signal="pressed" from="TwistPivot/PitchPivot/Camera3D/Panel/Button3" to="TwistPivot/PitchPivot/Camera3D/Panel" method="_on_button_3_pressed"]
[connection signal="pressed" from="TwistPivot/PitchPivot/Camera3D/Panel/Button4" to="TwistPivot/PitchPivot/Camera3D/Panel" method="_on_button_4_pressed"]
[connection signal="pressed" from="TwistPivot/PitchPivot/Camera3D/Panel/Button5" to="TwistPivot/PitchPivot/Camera3D/Panel" method="_on_button_5_pressed"]
[connection signal="OpenComputer" from="TwistPivot/PitchPivot/Camera3D/InteractRay" to="TwistPivot/PitchPivot/Camera3D/Panel" method="_on_interact_ray_open_computer"]
